# retroloop

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml  vite.config.js
_docs/: architecture.md  decisions.md  process.md  task-template.md
accounts/: admin.py  forms.py  models.py  urls.py  views.py
ai/: __init__.py  audio.py  clustering.py  extraction.py  fakes.py  transcription.py
board/: mutations.py  serializers.py  urls.py  views.py
config/: settings.py  settings_test.py  tasks.py  urls.py  views.py
cycles/: forms.py  models.py  reveal.py  urls.py  views.py
demo/: apps.py  seed.py
deploy/: nginx.conf
meetings/: extraction.py  forms.py  locks.py  models.py  pipeline.py  services.py  sweeper.py  uploads.py  urls.py  views.py
projects/: forms.py  models.py  permissions.py  urls.py  views.py
retro/: apps.py  clustering.py  forms.py  models.py  services.py  urls.py  views.py
templates/: base.html  base_app.html  home.html
tests/: assets.py  conftest.py  killable_worker.py  media_sweeper_tests.py  template_render.py  test_asset_fixture.py  test_audio.py  test_auth.py  test_board.py  test_board_mutations.py  test_board_ui.py  test_cards.py  test_ci_workflow.py  test_clustering.py  test_compose_worker.py  test_cycles.py  test_dashboard.py  test_discussion.py  test_env_example.py  test_extraction.py  test_home.py  test_island.py  test_layout.py  test_meetings.py  test_outcomes.py  test_permissions.py  test_projects.py  test_public_id.py  test_retro.py  test_reveal.py  (+10 more)
(+52 files in other folders)
